# openapi.yaml
@@ -789,6 +789,24 @@ paths:
                         application/json:
                             schema:
                                 $ref: '#/components/schemas/Status'
+    /api/goal_admin/user/withdraw_eth:
+        get:
+            tags:
+                - User
+            operationId: User_UserWithdrawEth
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/UserWithdrawEthReply'
+                default:
+                    description: Default error response
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/Status'
     /api/goal_admin/user/{userId}:
         get:
             tags:
@@ -1987,6 +2005,11 @@ components:
         UserDepositRequest_SendBody:
             type: object
             properties: {}
+        UserWithdrawEthReply:
+            type: object
+            properties:
+                result:
+                    type: string
         UserWithdrawReply:
             type: object
             properties:
